@@ -984,7 +984,7 @@ class addSource(_Source):
 				    ' dest keywords')
 		elif (self.dest % recipe.macros)[-1] == '/':
                     self.dir = self.dest
-                    self.dest = os.path.basename(self.sourcename %recipe.macros)
+                    self.dest = os.path.basename(self.sourcename)
                 else:
                     self.dir = os.path.dirname(self.dest % recipe.macros)
                     self.dest = fileName
@@ -992,7 +992,7 @@ class addSource(_Source):
                     # later, make sure any %s in the path name survive
                     self.dir.replace('%', '%%')
 	else:
-	    self.dest = os.path.basename(self.sourcename %recipe.macros)
+	    self.dest = os.path.basename(self.sourcename)
 
 	if self.contents is not None:
 	    # Do not look for a file that does not exist...
